fixed duplication in data reading

--- a/docker_orchestrator_colab.ipynb
+++ b/docker_orchestrator_colab.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -542,8 +542,9 @@
    "source": [
     "colab_names = []\n",
     "name_request_batch_size = 99\n",
-    "for start in range(0, len(colabs_df['colab_id']), name_request_batch_size):\n",
-    "    colab_names += GoogleDrive.get_file_names_in_batch(colabs_df['colab_id'].tolist()[start:start+name_request_batch_size])\n",
+    "distinct_colab_ids = list(set(colabs_df['colab_id']))\n",
+    "for start in range(0, len(distinct_colab_ids), name_request_batch_size):\n",
+    "    colab_names += GoogleDrive.get_file_names_in_batch(distinct_colab_ids[start:start+name_request_batch_size])\n",
     "colab_name_df = pd.DataFrame(colab_names)\n",
     "colab_name_df = colab_name_df[~colab_name_df['colab_name'].isna()]\n",
     "colabs_df = pd.merge(colab_name_df, colabs_df, on='colab_id')\n",
